fixed the overflow of timeline content in the grid

--- a/src/css-components/Qualifications.module.css
+++ b/src/css-components/Qualifications.module.css
@@ -44,6 +44,7 @@
     list-style-type: none;
     padding-left: 50vw;
     height: 100%;
+    width: 100%;
 }
 
 .timelineList > li {
